Modified Linked List

--- a/linked_list/questions/partone.ipynb
+++ b/linked_list/questions/partone.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 -> 2 -> 1 -> 9 -> 3 -> 8 -> 3 -> 9 -> 1 -> 6\n",
+      "6 -> 10 -> 10 -> 6 -> 6 -> 3 -> 4 -> 2 -> 1 -> 1\n",
       "10\n"
      ]
     }
@@ -88,27 +88,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 -> 5 -> 2 -> 1 -> 3 -> 5 -> 4 -> 7 -> 5 -> 3\n",
-      "10\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'value'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 120\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[39mprint\u001b[39m(customLL)\n\u001b[0;32m    117\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(customLL))\n\u001b[1;32m--> 120\u001b[0m customLL\u001b[39m.\u001b[39;49mdelete_node(\u001b[39m0\u001b[39;49m)\n\u001b[0;32m    122\u001b[0m \u001b[39mprint\u001b[39m(customLL)\n",
-      "Cell \u001b[1;32mIn[17], line 83\u001b[0m, in \u001b[0;36mLinkedList.delete_node\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m     80\u001b[0m     prev_node \u001b[39m=\u001b[39m temp\n\u001b[0;32m     81\u001b[0m     temp \u001b[39m=\u001b[39m temp\u001b[39m.\u001b[39mnext\n\u001b[1;32m---> 83\u001b[0m     \u001b[39mif\u001b[39;00m temp\u001b[39m.\u001b[39;49mvalue \u001b[39m==\u001b[39m value:\n\u001b[0;32m     84\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     86\u001b[0m \u001b[39mif\u001b[39;00m temp \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'value'"
+      "4 -> 1 -> 3 -> 2 -> 0 -> 3 -> 2 -> 5 -> 3 -> 5 -> 0 -> 3 -> 3 -> 3 -> 2 -> 3 -> 4 -> 0 -> 0 -> 3\n",
+      "20\n",
+      "Duplicate Value :- 3\n",
+      "Duplicate Value :- 2\n",
+      "Duplicate Value :- 3\n",
+      "Duplicate Value :- 5\n",
+      "Duplicate Value :- 0\n",
+      "Duplicate Value :- 3\n",
+      "Duplicate Value :- 3\n",
+      "Duplicate Value :- 3\n",
+      "Duplicate Value :- 2\n",
+      "Duplicate Value :- 3\n",
+      "Duplicate Value :- 4\n",
+      "Duplicate Value :- 0\n",
+      "Duplicate Value :- 0\n",
+      "Duplicate Value :- 3\n",
+      "1 -> 5 -> 2 -> 4 -> 0 -> 3\n",
+      "6\n"
      ]
     }
    ],
@@ -191,7 +195,11 @@
     "            # values = [str(x) for x in self]\n",
     "            temp = self.head\n",
     "            \n",
-    "            while temp:\n",
+    "            if temp.value == value:\n",
+    "                self.head = self.head.next\n",
+    "                return \n",
+    "            \n",
+    "            while temp != None:\n",
     "                if temp.value == value:\n",
     "                    break\n",
     "                prev_node = temp\n",
@@ -199,7 +207,7 @@
     "                \n",
     "                \n",
     "            \n",
-    "            if temp is None:\n",
+    "            if temp == None:\n",
     "                print('The value does not exist in the list')\n",
     "                return\n",
     "            else:\n",
@@ -208,7 +216,7 @@
     "        \n",
     "    \n",
     "    \n",
-    "    def check_duplicates(self):\n",
+    "    def remove_duplicates(self):\n",
     "        values = [str(x) for x in self]\n",
     "        \n",
     "        new_values = []\n",
@@ -221,26 +229,215 @@
     "                new_values.append(x)\n",
     "        \n",
     "        for x in duplicates:\n",
-    "            self.delete_node(x)\n",
-    "    \n",
-    "    def without_duplicates(self):\n",
-    "        pass\n",
+    "            print(f'Duplicate Value :- {x}')\n",
+    "            self.delete_node(int(x))\n",
     "        \n",
     "\n",
     "customLL = LinkedList()\n",
-    "customLL.generate_list(10,0,10)\n",
+    "customLL.generate_list(20,0,5)\n",
     "print(customLL)\n",
     "print(len(customLL))\n",
     "\n",
     "\n",
-    "customLL.delete_node(0)\n",
+    "customLL.remove_duplicates()\n",
     "\n",
-    "print(customLL)"
+    "print(customLL)\n",
+    "print(len(customLL))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32 -> 54 -> 52 -> 23 -> 42 -> 77 -> 88 -> 0 -> 42 -> 87\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"_summary_\n",
+    "\n",
+    "QUES 1:- Return nth Element from the last of the Linked List\n",
+    "My Method\n",
+    "    \n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "from random import randint\n",
+    "\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value) -> None:\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return (str(self.value))\n",
+    "\n",
+    "\n",
+    "class LinkedList():\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "#this function makes our class iterable\n",
+    "    def __iter__(self):\n",
+    "        temp = self.head\n",
+    "        \n",
+    "        while temp:\n",
+    "            yield temp.value\n",
+    "            temp = temp.next\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self]\n",
+    "        return ' -> '.join(values)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        result = 0\n",
+    "        temp = self.head\n",
+    "        \n",
+    "        while temp:\n",
+    "            result += 1\n",
+    "            temp = temp.next\n",
+    "        \n",
+    "        return result\n",
+    "\n",
+    "#creating a default add method, only adds a node to the end of the list\n",
+    "    def add(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.head is None:\n",
+    "            self.head = node\n",
+    "            self.tail = node\n",
+    "        else:\n",
+    "            self.tail.next = node\n",
+    "            self.tail = node\n",
+    "        \n",
+    "        return self.tail\n",
+    "\n",
+    "#this func generates a random list for us \n",
+    "    def generate_list(self, n, min_val, max_val):\n",
+    "        self.head = self.tail = None\n",
+    "        \n",
+    "        for _ in range(n):\n",
+    "            self.add(randint(min_val, max_val))\n",
+    "        \n",
+    "        return self\n",
+    "\n",
+    "    def delete_node(self, value):\n",
+    "        if self.head is None:\n",
+    "            print('The list is empty')\n",
+    "            return\n",
+    "        else:\n",
+    "            # values = [str(x) for x in self]\n",
+    "            temp = self.head\n",
+    "            \n",
+    "            if temp.value == value:\n",
+    "                self.head = self.head.next\n",
+    "                return \n",
+    "            \n",
+    "            while temp != None:\n",
+    "                if temp.value == value:\n",
+    "                    break\n",
+    "                prev_node = temp\n",
+    "                temp = temp.next\n",
+    "                \n",
+    "                \n",
+    "            \n",
+    "            if temp == None:\n",
+    "                print('The value does not exist in the list')\n",
+    "                return\n",
+    "            else:\n",
+    "                prev_node.next = temp.next\n",
+    "            \n",
+    "    def return_n_element_from_last(self, n):\n",
+    "        values = [str(x) for x in self]\n",
+    "        total_length = len(values)\n",
+    "        result_index = (total_length - n) \n",
+    "         \n",
+    "        start_index = 0\n",
+    "        temp = self.head   \n",
+    "        while start_index != result_index:\n",
+    "            temp = temp.next \n",
+    "            start_index += 1\n",
+    "        \n",
+    "        return temp.value  \n",
+    "    \n",
+    "    \n",
+    "    def remove_duplicates(self):\n",
+    "        values = [str(x) for x in self]\n",
+    "                                            \n",
+    "        new_values = []\n",
+    "        duplicates = []\n",
+    "        \n",
+    "        for x in values:\n",
+    "            if x in new_values:\n",
+    "                duplicates.append(x)\n",
+    "            else:\n",
+    "                new_values.append(x)\n",
+    "        \n",
+    "        for x in duplicates:\n",
+    "            print(f'Duplicate Value :- {x}')\n",
+    "            self.delete_node(int(x))\n",
+    "        \n",
+    "\n",
+    "customLL = LinkedList()\n",
+    "customLL.generate_list(10,0,99)\n",
+    "print(customLL)\n",
+    "print(len(customLL))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_n_element_from_last(l,n):\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "    Args:\n",
+    "        l (class): A LinkedList class \n",
+    "        n (int): The Kth element we want to find from the last node of the linked list\n",
+    "\n",
+    "    Returns:\n",
+    "        int: returns the Node Value of the kth element\n",
+    "    \"\"\"\n",
+    "    pointer1 = l.head\n",
+    "    pointer2 = l.head\n",
+    "    \n",
+    "    for _ in range(n - 1):\n",
+    "        pointer2 = pointer2.next\n",
+    "    \n",
+    "    while pointer2 != l.tail:\n",
+    "        pointer1 = pointer1.next\n",
+    "        pointer2 = pointer2.next\n",
+    "    \n",
+    "    return pointer1.value\n",
+    "\n",
+    "find_n_element_from_last(customLL,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +447,16 @@
       "[1, 2]\n",
       "[1]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -266,7 +473,170 @@
     "        \n",
     "\n",
     "print(nums2)\n",
-    "print(duplicates)"
+    "print(duplicates)\n",
+    "\n",
+    "len(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 5 -> 0 -> 0 -> 9 -> 2 -> 2 -> 7 -> 9 -> 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "QUES1:- Create a partition such that all nodes with values greater than x appear on the right\n",
+    "and all nodes with values smaller than x appear on the right    \n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"_summary_\n",
+    "\n",
+    "QUES 1:- Return nth Element from the last of the Linked List\n",
+    "My Method\n",
+    "    \n",
+    "\"\"\"\n",
+    "\n",
+    "from random import randint\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value) -> None:\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return (str(self.value))\n",
+    "\n",
+    "\n",
+    "class LinkedList():\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "#this function makes our class iterable\n",
+    "    def __iter__(self):\n",
+    "        temp = self.head\n",
+    "        \n",
+    "        while temp:\n",
+    "            yield temp.value\n",
+    "            temp = temp.next\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self]\n",
+    "        return ' -> '.join(values)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        result = 0\n",
+    "        temp = self.head\n",
+    "        \n",
+    "        while temp:\n",
+    "            result += 1\n",
+    "            temp = temp.next\n",
+    "        \n",
+    "        return result\n",
+    "\n",
+    "#creating a default add method, only adds a node to the end of the list\n",
+    "    def add_beginning(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.head is None:\n",
+    "            self.head = node\n",
+    "            self.tail = node\n",
+    "        else:\n",
+    "            node.next = self.head\n",
+    "            self.head = node\n",
+    "        \n",
+    "        return self.tail\n",
+    "    def add_end(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.head is None:\n",
+    "            self.head = node\n",
+    "            self.tail = node\n",
+    "        else:\n",
+    "            self.tail.next = node\n",
+    "            self.tail = node\n",
+    "        \n",
+    "        return self.tail\n",
+    "\n",
+    "#this func generates a random list for us \n",
+    "    def generate_list(self, n, min_val, max_val):\n",
+    "        self.head = self.tail = None\n",
+    "        \n",
+    "        for _ in range(n):\n",
+    "            self.add_end(randint(min_val, max_val))\n",
+    "        \n",
+    "        return self\n",
+    "\n",
+    "    def create_partition(self, x):\n",
+    "        temp = self.head\n",
+    "        self.tail = temp\n",
+    "        \n",
+    "        while temp:\n",
+    "            \n",
+    "        \n",
+    "    \n",
+    "    def delete_node(self, value):\n",
+    "        if self.head is None:\n",
+    "            print('The list is empty')\n",
+    "            return\n",
+    "        else:\n",
+    "            # values = [str(x) for x in self]\n",
+    "            temp = self.head\n",
+    "            \n",
+    "            if temp.value == value:\n",
+    "                self.head = self.head.next\n",
+    "                return \n",
+    "            \n",
+    "            while temp != None:\n",
+    "                if temp.value == value:\n",
+    "                    break\n",
+    "                prev_node = temp\n",
+    "                temp = temp.next\n",
+    "            \n",
+    "            if temp == None:\n",
+    "                print('The value does not exist in the list')\n",
+    "                return\n",
+    "            else:\n",
+    "                prev_node.next = temp.next\n",
+    "  \n",
+    "        \n",
+    "\n",
+    "customLL = LinkedList()\n",
+    "customLL.generate_list(10,0,10)\n",
+    "print(customLL)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'customLL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m customLL\u001b[39m.\u001b[39mcreate_partition(\u001b[39m5\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(customLL)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'customLL' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "customLL.create_partition(5)\n",
+    "print(customLL)"
    ]
   }
  ],
