--- a/linked_list/questions/partone.ipynb
+++ b/linked_list/questions/partone.ipynb
@@ -575,11 +575,11 @@
     "        \n",
     "        return self\n",
     "\n",
-    "    def create_partition(self, x):\n",
-    "        temp = self.head\n",
-    "        self.tail = temp\n",
+    "    # def create_partition(self, x):\n",
+    "    #     temp = self.head\n",
+    "    #     self.tail = temp\n",
     "        \n",
-    "        while temp:\n",
+    "    #     while temp:\n",
     "            \n",
     "        \n",
     "    \n",
