--- a/stack/intro.ipynb
+++ b/stack/intro.ipynb
@@ -9,31 +9,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "1312 93123 11312\n",
+      "1312 93123\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#implementing stack using my understanding\n",
     "class Stack:\n",
-    "    def __init__(self, name, last, age):\n",
-    "        self.name = name\n",
-    "        self.last = last\n",
-    "        self.age = age"
+    "    def __init__(self) -> None:\n",
+    "        self.stack = []\n",
+    "    \n",
+    "    def push(self, value):\n",
+    "        self.stack.append(value)\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        return self.stack.pop()\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self.stack]\n",
+    "        \n",
+    "        return \" \".join(values)\n",
+    "\n",
+    "s1 = Stack()\n",
+    "s1.push(1312)\n",
+    "s1.push(93123)\n",
+    "s1.push(11312)\n",
+    "\n",
+    "print(s1)\n",
+    "\n",
+    "s1.pop()\n",
+    "\n",
+    "print(s1)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
