--- a/queues/intro.ipynb
+++ b/queues/intro.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "#my way\n",
-    "#queue with fixed capacity\n",
+    "#queue without fixed capacity\n",
     "class Queue:\n",
     "    def __init__(self) -> None:\n",
     "        self.queue = []\n",
@@ -77,20 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'elif' statement on line 12 (1896808223.py, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[26], line 16\u001b[1;36m\u001b[0m\n\u001b[1;33m    def dequeue(self):\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'elif' statement on line 12\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5\n",
+      "None None 3 4 5\n"
      ]
     }
    ],
    "source": [
-    "#queue without fixed capacity\n",
+    "#queue with fixed capacity\n",
     "\n",
     "class Queue:\n",
     "    def __init__(self, size) -> None:\n",
@@ -111,27 +111,50 @@
     "            \n",
     "            else:\n",
     "                self.top += 1\n",
+    "                \n",
     "                if self.start == -1:\n",
     "                    self.start += 1\n",
+    "                    \n",
+    "            self.queue[self.top] = value\n",
+    "        \n",
+    "        return f'the element has been inserted'\n",
+    "            \n",
     "        \n",
     "    def dequeue(self):\n",
-    "        \n",
     "        if self.is_empty():\n",
     "            return f'the list is empty, plz insert an element'\n",
-    "        \n",
     "        else:\n",
+    "            element = self.queue[self.start]\n",
+    "            self.queue[self.start] = None\n",
     "            \n",
+    "            if self.start == self.top:\n",
+    "                self.start = -1\n",
+    "                self.top = -1\n",
+    "                \n",
+    "            elif self.start + 1 == self.size:\n",
+    "                self.start = 0 \n",
+    "                \n",
+    "            else:\n",
+    "                self.start += 1 \n",
+    "            \n",
+    "            \n",
+    "            return element\n",
+    "                \n",
     "            \n",
     "    \n",
     "    def peek(self):\n",
     "        \"\"\"\n",
     "        returns the first element without removing\n",
     "        \"\"\"\n",
-    "        return self.queue[0]\n",
+    "        if self.is_empty():\n",
+    "            return f'the list is empty, plz insert an element'\n",
+    "        \n",
+    "        return self.queue[self.start]\n",
     "\n",
     "    def delete_queue(self):\n",
-    "       self.queue = None\n",
-    "       return \n",
+    "       self.queue = [None] * self.size\n",
+    "       self.start = -1\n",
+    "       self.top = -1\n",
     "    \n",
     "    def is_empty(self):\n",
     "        if self.top == -1:\n",
@@ -161,7 +184,7 @@
     "        return \" \".join(values)\n",
     "\n",
     "\n",
-    "q1 = Queue()\n",
+    "q1 = Queue(5)\n",
     "\n",
     "\n",
     "q1.enqueue(1)\n",
@@ -170,35 +193,59 @@
     "q1.enqueue(4)\n",
     "q1.enqueue(5)\n",
     "q1.enqueue(6)\n",
-    "\n",
     "print(q1)\n",
     "\n",
+    "q1.dequeue()\n",
+    "q1.dequeue()\n",
+    "\n",
+    "print(q1)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[None, None, None, None, None]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list1 = [None] * 5\n",
-    "print(list1)"
+    "#creating a queue using Linked List\n",
+    "class Node:\n",
+    "    def __init__(self, value) -> None:\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "\n",
+    "class Queue:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.customLL = LinkedList()\n",
+    "    \n",
+    "    def enqueue(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.customLL.tail is None:\n",
+    "            self.customLL.head = node\n",
+    "            self.customLL.tail = node\n",
+    "        else:\n",
+    "            self.customLL.tail.next = node\n",
+    "            self.customLL.tail = node\n",
+    "            \n",
+    "\n",
+    "q1 = Queue()\n",
+    "q1.enqueue(1)\n",
+    "        \n",
+    "    \n",
+    "    \n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +261,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7e5d8a5ccdc9cc2fcb660ade00fac7fbc57fba405d09d77021876d202efcc6d9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
