worked on some stack questions

--- a/queues/intro.ipynb
+++ b/queues/intro.ipynb
@@ -205,9 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4\n",
+      "3 4\n"
+     ]
+    }
+   ],
    "source": [
     "#creating a queue using Linked List\n",
     "class Node:\n",
@@ -215,11 +224,31 @@
     "        self.value = value\n",
     "        self.next = None\n",
     "        self.prev = None\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value\n",
     "\n",
     "class LinkedList:\n",
     "    def __init__(self) -> None:\n",
     "        self.head = None\n",
     "        self.tail = None\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        temp = self.head\n",
+    "        while temp:\n",
+    "            yield temp.value\n",
+    "            temp = temp.next\n",
+    "    \n",
+    "    # def __str__(self) -> str:\n",
+    "    #     values = []\n",
+    "    #     temp = self.head\n",
+    "    #     while temp:\n",
+    "    #         values.append(temp.value)\n",
+    "    #         temp = temp.next\n",
+    "        \n",
+    "    #     return \"  \".join(values)\n",
+    "        # values = [str(x) for x in self]\n",
+    "        # return \" -> \".join(values)\n",
     "\n",
     "class Queue:\n",
     "    def __init__(self) -> None:\n",
@@ -234,13 +263,131 @@
     "            self.customLL.tail.next = node\n",
     "            self.customLL.tail = node\n",
     "            \n",
+    "    def dequeue(self):\n",
+    "        \n",
+    "        if self.isEmpty():\n",
+    "            return f'The list is empty'\n",
+    "        \n",
+    "    #if there is only one node\n",
+    "        elif self.customLL.head == self.customLL.tail:\n",
+    "            element = self.customLL.head.value\n",
+    "            self.customLL.head = None\n",
+    "            self.customLL.tail = None\n",
+    "            return element\n",
+    "        \n",
+    "    #if there are multiple nodes   \n",
+    "        else:\n",
+    "            element = self.customLL.head.value\n",
+    "            self.customLL.head = self.customLL.head.next\n",
+    "            return element\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "            return f'The list is empty'\n",
+    "        element = self.customLL.head.value\n",
+    "        return element\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        if self.customLL.head is None:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def delete(self):\n",
+    "        self.customLL.head = None\n",
+    "        self.customLL.tail = None\n",
+    "            \n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self.customLL]\n",
+    "        return \" \".join(values)\n",
+    "        \n",
     "\n",
     "q1 = Queue()\n",
     "q1.enqueue(1)\n",
-    "        \n",
-    "    \n",
+    "q1.enqueue(2)\n",
+    "q1.enqueue(3)\n",
+    "q1.enqueue(4)\n",
+    "print(q1)\n",
+    "q1.dequeue()\n",
+    "q1.dequeue()\n",
+    "print(q1)\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2, 3], maxlen=3)\n",
+      "deque([2, 3, 50], maxlen=3)\n",
+      "2\n",
+      "deque([3, 50], maxlen=3)\n",
+      "deque([], maxlen=3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#implemented queue using the collections module\n",
+    "#collections module provides some built in containers and allows us to store elements and iterate over them\n",
+    "from collections import deque\n",
+    "\n",
+    "custom_q = deque(maxlen=3)\n",
+    "custom_q.append(1)\n",
+    "custom_q.append(2)\n",
+    "custom_q.append(3)\n",
+    "print(custom_q)\n",
+    "\n",
+    "#if we add an element and it exceeds the size\n",
+    "#then it automatically removes the first element to may way for that element\n",
+    "custom_q.append(50)\n",
+    "print(custom_q)\n",
+    "\n",
+    "#returns and removes the last element\n",
+    "print(custom_q.popleft())\n",
+    "print(custom_q)\n",
+    "\n",
+    "custom_q.clear()\n",
+    "print(custom_q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import Queue\n",
+    "\n",
+    "q = Queue(maxsize=3)\n",
+    "print(q.qsize())\n",
+    "q.put(1)\n",
+    "q.put(2)\n",
+    "q.put(3)\n",
+    "q.put(332)\n",
+    "q.put(3324)\n",
+    "\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
