--- a/stack/intro.ipynb
+++ b/stack/intro.ipynb
@@ -42,6 +42,296 @@
     "\n",
     "print(s1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "No more elements can be removed, the stack is already empty\n",
+      "None None None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#implementing stack with a size limit\n",
+    "class Stack:\n",
+    "    def __init__(self, size) -> None:\n",
+    "        self.stack = [None] * size\n",
+    "        self.size = size\n",
+    "        self.start = -1\n",
+    "        self.top = -1\n",
+    "    \n",
+    "    def push(self, value):\n",
+    "        if self.isEmpty():\n",
+    "            self.start = 0\n",
+    "            self.top = 0\n",
+    "            self.stack[self.start] = value\n",
+    "               \n",
+    "        elif self.isFull():\n",
+    "            return 'The stack is full no more elements can be inserted'\n",
+    "        \n",
+    "        else:\n",
+    "            self.top += 1\n",
+    "            self.stack[self.top] = value\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'No more elements can be removed, the stack is already empty'\n",
+    "        else:\n",
+    "            element = self.stack[self.top]\n",
+    "            self.stack[self.top] = None\n",
+    "            self.top -= 1\n",
+    "            return element\n",
+    "    \n",
+    "    def isFull(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'The stack is empty, so it cannot be full'\n",
+    "        elif self.start == 0 and self.top == self.size - 1:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        if self.top == -1:\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self.stack]\n",
+    "        \n",
+    "        return \" \".join(values)\n",
+    "        \n",
+    "s1 = Stack(3)\n",
+    "\n",
+    "s1.push(1)\n",
+    "s1.push(2)\n",
+    "s1.push(3)\n",
+    "print(s1)\n",
+    "\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "# print(s1)\n",
+    "\n",
+    "\n",
+    "# print(s1.isEmpty())        \n",
+    "# print(s1.isFull())        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1 -> 2 -> 3 -> 34\n",
+      "34\n",
+      "1 -> 2 -> 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#implementing stack using a linked List\n",
+    "#there is no Limit\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value) -> None:\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        temp = self.head\n",
+    "        while temp:\n",
+    "            yield temp.value\n",
+    "            temp = temp.next\n",
+    "            \n",
+    "class Stack:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.stack = LinkedList()\n",
+    "    \n",
+    "    def push(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.isEmpty():\n",
+    "        #create a new head and tail Node\n",
+    "            self.stack.head = node\n",
+    "            self.stack.tail = node\n",
+    "        else:\n",
+    "            self.stack.tail.next = node\n",
+    "            self.stack.tail = node\n",
+    "         \n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'No more elements can be removed, the stack is already empty'\n",
+    "        \n",
+    "        elif self.stack.head == self.stack.tail:\n",
+    "        #if there is only one element in the list\n",
+    "            self.stack.head = None\n",
+    "            self.stack.tail = None\n",
+    "            \n",
+    "        else:\n",
+    "            temp = self.stack.head\n",
+    "            while temp != self.stack.tail:\n",
+    "                prev = temp\n",
+    "                temp = temp.next\n",
+    "            \n",
+    "            element = self.stack.tail.value\n",
+    "            prev.next = None\n",
+    "            self.stack.tail = prev\n",
+    "            return element\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "    #if the tail points to None the list is empty\n",
+    "        if self.stack.tail is None:\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self.stack]\n",
+    "        \n",
+    "        return \" -> \".join(values)\n",
+    "        \n",
+    "s1 = Stack()\n",
+    "\n",
+    "print(s1.isEmpty())\n",
+    "\n",
+    "s1.push(1)\n",
+    "s1.push(2)\n",
+    "s1.push(3)\n",
+    "s1.push(34)\n",
+    "print(s1)\n",
+    "\n",
+    "print(s1.pop())\n",
+    "\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "print(s1)\n",
+    "\n",
+    "\n",
+    "# print(s1.isEmpty())        \n",
+    "# print(s1.isFull())        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#implementing stack using a linked List with size limit\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value) -> None:\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        temp = self.head\n",
+    "        while temp:\n",
+    "            yield temp.value\n",
+    "            temp = temp.next\n",
+    "            \n",
+    "class Stack:\n",
+    "    def __init__(self, size) -> None:\n",
+    "        self.stack = LinkedList()\n",
+    "        self.size = size\n",
+    "        self.start = -1\n",
+    "        self.top = -1\n",
+    "    \n",
+    "    def push(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.isEmpty():\n",
+    "        #create a new head and tail Node\n",
+    "            self.stack.head = node\n",
+    "            self.stack.tail = node\n",
+    "        else:\n",
+    "            self.stack.tail.next = node\n",
+    "            self.stack.tail = node\n",
+    "         \n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'No more elements can be removed, the stack is already empty'\n",
+    "        \n",
+    "        elif self.stack.head == self.stack.tail:\n",
+    "        #if there is only one element in the list\n",
+    "            self.stack.head = None\n",
+    "            self.stack.tail = None\n",
+    "            \n",
+    "        else:\n",
+    "            temp = self.stack.head\n",
+    "            while temp != self.stack.tail:\n",
+    "                prev = temp\n",
+    "                temp = temp.next\n",
+    "            \n",
+    "            element = self.stack.tail.value\n",
+    "            prev.next = None\n",
+    "            self.stack.tail = prev\n",
+    "            return element\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "    #if the tail points to None the list is empty\n",
+    "        if self.stack.tail is None:\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        values = [str(x) for x in self.stack]\n",
+    "        \n",
+    "        return \" -> \".join(values)\n",
+    "        \n",
+    "s1 = Stack()\n",
+    "\n",
+    "print(s1.isEmpty())\n",
+    "\n",
+    "s1.push(1)\n",
+    "s1.push(2)\n",
+    "s1.push(3)\n",
+    "s1.push(34)\n",
+    "print(s1)\n",
+    "\n",
+    "print(s1.pop())\n",
+    "\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "# print(s1.pop())\n",
+    "print(s1)\n",
+    "\n",
+    "\n",
+    "# print(s1.isEmpty())        \n",
+    "# print(s1.isFull())        "
+   ]
   }
  ],
  "metadata": {
