--- a/queues/interview_questions.ipynb
+++ b/queues/interview_questions.ipynb
@@ -19,14 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "000000000\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after function definition on line 49 (2160371037.py, line 52)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 52\u001b[1;36m\u001b[0m\n\u001b[1;33m    def __str__(self) -> str:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after function definition on line 49\n"
      ]
     }
    ],
@@ -106,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
