--- a/queues/intro.ipynb
+++ b/queues/intro.ipynb
@@ -293,6 +293,15 @@
     "        else:\n",
     "            return False\n",
     "    \n",
+    "    package.json\n",
+    "    {'keys':{\n",
+    "        'values':{\n",
+    "            'name_1':[],\n",
+    "            'name_2':[],\n",
+    "            'name_3':[]\n",
+    "        }\n",
+    "    }}\n",
+    "    \n",
     "    def delete(self):\n",
     "        self.customLL.head = None\n",
     "        self.customLL.tail = None\n",
@@ -406,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
