--- a/stack/intro.ipynb
+++ b/stack/intro.ipynb
@@ -16,6 +16,8 @@
    ],
    "source": [
     "#implementing stack using my understanding\n",
+    "#without any size limit\n",
+    "\n",
     "class Stack:\n",
     "    def __init__(self) -> None:\n",
     "        self.stack = []\n",
@@ -192,10 +194,12 @@
     "            self.stack.tail = None\n",
     "            \n",
     "        else:\n",
+    "            prev = temp\n",
     "            temp = self.stack.head\n",
+    "            \n",
     "            while temp != self.stack.tail:\n",
-    "                prev = temp\n",
     "                temp = temp.next\n",
+    "                prev = temp\n",
     "            \n",
     "            element = self.stack.tail.value\n",
     "            prev.next = None\n",
